amended env example after AWS deployment tweaks to more accurately reflect how to deploy your own trade sim.

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,9 +1,11 @@
-# Marketaux API Key for finance news
-VITE_MARKETAUX_API_KEY=your_marketaux_api_key_here
+# Cloudfront URL
+VITE_API_URL=https://<a12b3cde4fghij>.cloudfront.net
 
-# VITE
-VITE_API_URL=your_api_url_here
-VITE_COGNITO_USER_POOL_ID=ca-central-1_[...]
+# Cognito
+VITE_COGNITO_USER_POOL_ID=ca-central-1_your_user_pool_id
 VITE_COGNITO_CLIENT_ID=your_cognito_client_id
 VITE_COGNITO_REGION=ca-central-1
-VITE_COGNITO_DOMAIN=ca-central-1[...].auth.ca-central-1.amazoncognito.com
+VITE_COGNITO_DOMAIN=ca-central-1<your_user_pool_id>.auth.ca-central-1.amazoncognito.com
+
+# Marketaux API for finance news
+VITE_MARKETAUX_API_KEY=your_marketaux_api_key_here
