--- a/server/.env.example
+++ b/server/.env.example
@@ -1,19 +1,19 @@
 # Server
+NODE_ENV=production
 PORT=3000
-NODE_ENV=development
 
-# Database
-DATABASE_URL=postgresql://username:password@localhost:5432/stock_simulator
-DB_HOST=localhost
+# Database (RDS)
+DB_HOST=<DB_INSTANCE_NAME>.cvauoug4q23o.ca-central-1.rds.amazonaws.com
 DB_PORT=5432
-DB_NAME=stock_simulator
-DB_USER=username
-DB_PASSWORD=password
+DB_NAME=your_database_name
+DB_USER=your_user_id
+DB_PASSWORD=your_password
+DATABASE_URL=your_database_url
 
-# AWS Cognito (to be configured later)
-COGNITO_USER_POOL_ID=
-COGNITO_CLIENT_ID=
-COGNITO_REGION=us-east-1
+# Cognito
+COGNITO_USER_POOL_ID=ca-central-1_your_user_pool_id
+COGNITO_CLIENT_ID=your_cognito_client_id
+COGNITO_REGION=ca-central-1
 
-# Finnhub API
+# External APIs (FinnHub for real-time quotes)
 FINNHUB_API_KEY=your_finnhub_api_key_here
